# oauth2-jwt-bearer

./: .gitignore  ChangeLog.md  LICENSE  README.md  oauth2-jwt-bearer.cabal  oauth2-jwt-bearer.lock-8.2.1  oauth2-jwt-bearer.lock-8.2.2
.buildkite/: docker-compose.yml  pipeline.yml
.circleci/: config.yml
src/Network/OAuth2/JWT/: Client.hs
src/Network/OAuth2/JWT/Client/: AuthorizationGrant.hs  Data.hs  Example.hs  Serial.hs
test/: test.hs
test/Test/Network/OAuth2/JWT/Client/: .#AuthorizationGrant.hs  AuthorizationGrant.hs  TestServer.hs
